<?xml version="1.0"?>
<package format="2">
  <name>mujoco_mocap_synchronizer_plugin</name>
  <version>0.1.0</version>
  <description>The mujoco_mocap_synchronizer_plugin package</description>

  <maintainer email="balazs.andras.balint@ipa.fraunhofer.de">Bal치zs A. B치lint</maintainer>

  <license>BSD-3-Clause</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pitasc_mujoco_sim</url> -->
  <url type="repository">https://github.com/balandbal/mujoco_mocap_synchronizer_plugin</url>

  <author email="balazs.andras.balint@ipa.fraunhofer.de">Bal치zs A. B치lint</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>

</package>
